# Aishiz.fix

./: .gitignore  LLAMA_CPP_INTEGRATION.md  LLAMA_INTEGRATION.md  README.md  build.gradle.kts  gradle.properties  install-lldb.sh  settings.gradle.kts  verify_build.sh
.github/: copilot-instructions.md
.github/workflows/: android.yml  c-cpp.yml  gradle-publish.yml  gradle.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/aishiz/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/aishiz/: AishizPrefs.kt  ChatAdapter.kt  ChatMessage.kt  InferenceParams.kt  MainActivity.kt  ModelAdapter.kt  ModelInfo.kt  ModelStorage.kt  NativeLlamaBridge.kt
app/src/main/res/drawable/: assistant_message_bubble.xml  bg_bubble_assistant.xml  bg_bubble_user.xml  user_message_bubble.xml
app/src/main/res/layout/: activity_main.xml  item_message_assistant.xml  item_message_user.xml  item_model.xml
app/src/main/res/menu/: main_toolbar_menu.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: ic_launcher_background.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/example/aishiz/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
